_headerFW.scss
/* ... */
[class*=headerFW] .chevron{cursor: pointer; padding: 0; position: relative; display: inline-flex; justify-content: center; align-items: center; font-size: 1em; width: 2.35em; height: 2.35em;
  &:before{
    content: "";
    display: block;
    border: 0.25em solid currentColor;
    border-bottom-right-radius: 2px;
    border-left: 0;
    border-top: 0;
    bottom: 0;
    height: 1em;
    width: 1em;
    transform: rotate(-45deg);
    transition: all .4s;
    border-bottom-right-radius: 0.125em;
  }
  &.left:before{transform: rotate(135deg);}
}
.headerFW__nav__panel{
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  width: 80%;
  width: clamp(80%,600px,100%);
  height: 80vh;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background: body(block-background);
  color:  contrastFW(body(font-color),body(block-background));
  transition: transform 0.6s,height 0.4s;
  transform: translate3d(-105%,0,0);
  z-index: -1;
  box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2);
  // &:before{content: "";position: absolute; top: 0;left: 0;width: 100vw; height: 100%;background: rgba(0,0,0,0.1);}
  &.active{transform: translate3d(0,0,0);
    &.mobile{ position: fixed; z-index: 1; top: 0; bottom: 0; height: auto !important;}
  }
  .headerFW.panel--right &{
    transform: translate3d(105%,0,0); left: auto; right: 0;
    &.active{transform: translate3d(0,0,0);}
  }
  ul.panel__item{
    position: relative;
    display: flex;
    flex-direction: column;
    list-style: none;
    padding: 0;
    width: 100%;
    margin: 0;
    pointer-events: none;
    transition: all 0.8s;
    overflow: auto;
    flex-grow: 1;
    background: inherit;
    height: 0; opacity: 0; visibility: hidden;
    &.active{opacity: 1; visibility: visible; height: 100%; pointer-events: all;}
    li{ position: relative; display: flex;justify-content: space-between;align-items: center;
      &:nth-of-type(2n){background: rgba(0,0,0,0.035);}
      >*:not(ul):not(.toggler){min-width: 200px; display: block;padding: 0.75em 1.25em ; flex-grow: 1;}
      &>.toggler{ padding: 0; width: 3em; opacity: .35; transition: all .4s;
        &:before{transform: translateX(-8px) rotate(-45deg); }
        &:hover{opacity: 1;}
      }
    }
  }
  .panel__title{padding: 0.75em 1.25em;  cursor: pointer; position: sticky; top: 0; background: inherit; z-index: 1;
    &:before{content:"";position: absolute;top: 0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,0.035); z-index: -1;}
    span{font-size: 1.35em;font-style: italic; font-weight: 300;}
    .chevron{opacity: 0.35;}
  }
  .panel__actions{margin: auto 0 0; display: flex; align-items: center; position: sticky; bottom: 0; background: inherit;
    >*{flex-grow: 1; flex-basis: 0;}
    .back{background: rgba(0,0,0,0.5); color:white; padding: 0.8em 1.75em 1em; display: flex; justify-content: center;align-items: center; cursor: pointer;
      span{line-height: 1; font-size: 1.35em ; font-weight: 300; font-style: italic;}
      .chevron{opacity: 0.6;}
    }
  }
  &:not(.active){
    .panel__actions{pointer-events: none; visibility: hidden;}
  }
}

.headerFW__nav__toggler{
  display: none;
  flex-shrink: 0;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.6s;
  height: 60px;
  cursor: pointer;
  width: 40px;
  margin: auto 1.75em;
  transform-style: preserve-3d;
  transform: translate3d(0, 0, 0);
  @include media-max(xxs){ margin: auto 0.5em; width: 35px; }
  & .bar{
    height: 4px; width: 100%; background: currentColor; border-radius: 10px; transition: all 0.4s; position: absolute;transform: translate3d(0,0,0);
    &:nth-child(1){top: 14px; @include media-max(xxs){top: 16px;} }
    &:nth-child(2){top: 28px}
    &:nth-child(3){top: 42px; @include media-max(xxs){top: 40px;}}
  }
  &.active .bar{
    &:nth-child(1){top: 28px;transform: rotate3d(0,0,1,-45deg);}
    &:nth-child(2){opacity: 0;}
    &:nth-child(3){top: 28px;transform: rotate3d(0,0,1,45deg);}
  }
}


.headerFW__search{ transition: all 0.5s; position: relative; display: flex;align-items: center; justify-content: center; padding: 1em 1.75em;
  &:not([class*=bg-]){
    background: darken(header(background),15); color: contrastFW( header(font-color),darken(header(background),15));
  }
  input[type=text]{ transition-duration: 0.5s;}
  &.active{
    input[type=text]{width: clamp(200px,15vw,400px);}
  }
  &:not(.active){
    input[type=text]{width: 0; padding-left: 0;padding-right: 0; border-left-width:0; border-right-width: 0;
      +.btn{pointer-events: none;}
    }
  }
  .btn#{$exclude}{color: inherit;
    &:hover,&:focus{color: inherit;}
  }
}
.headerFW__search__field{margin: 0;}

.headerFW__lang{ padding: 1em 1.75em; display: flex;align-items: center;justify-content: center; position: relative;
  &:not([class*=bg-]){
    background: darken(header(background),25); color: contrastFW( header(font-color),darken(header(background),25));
  }
}
.headerFW__postnav{position: relative; display: flex;align-items: center; justify-content: center; padding: 1em 1.25em; }
.headerFW__topbar{padding: 0.5em 0.75em 0.55em; font-size: 0.85em; order:-1;
  &:not([class*=bg-]){
    background: darken(header(background),25); color: contrastFW( header(font-color),darken(header(background),25));
  }
}

